fix: navbar and video settings menu z-index issue

--- a/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/nav-bar/nav-bar.component.scss
@@ -126,7 +126,7 @@ a:active {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .nav-placeholder {
